[project]
name = "kb-sdk-plus"
version = "0.1.0"
description = "KB-SDK but +"
readme = "README.md"
requires-python = "==3.12.10"
dependencies = [
    "jsonrpcbase>=0.2.0",
    "kbase-auth",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ipython>=8.12.3",
]

[tool.uv.sources]
kbase-auth = { git = "https://github.com/kbase/auth2_client_python", rev = "0.1.0-test1" }
